--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>PrepEngine - Engineering Exam Prep</title>
+    <title>Vector Prep - Engineering Exam Prep</title>
     <meta name="description" content="Master your first-year engineering courses with interactive learn cards and adaptive practice questions." />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
